@@ -1,5 +1,6 @@
 2010-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* score/include/rtems/score/thread.h: Remove ITRON.
 	* score/include/rtems/score/interr.h: Remove ITRON.
 	* rtems/mainpage.h: Remove comment referring to ITRON.
 	* rtems/src/rtemsobjectgetapiname.c: Remove ITRON.
